# AuScope-Cat

./: .buildinfo  .pre-commit-config.yaml  AGENTS.md  README.md  genindex.html  llms.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  publish-release.yml  python-build-test.yml  python-publish.yml
QGIS-Plugin/auscopecatQGIS/: __init__.py  auscopecat.ui  auscopecatDialog.py  auscopecatQGIS.py  metadata.txt
_modules/: index.html
_modules/auscopecat/: api.html  auscopecat_types.html  network.html  nvcl.html  utils.html
_sources/: index.rst.txt
_sources/api_reference/: api.rst.txt  auscopecat.rst.txt  modules.rst.txt
_sources/development/: code_of_conduct.rst.txt
api_reference/: api.html  auscopecat.api.html  auscopecat.auscopecat_types.html  auscopecat.downloadTSG.html  auscopecat.html  auscopecat.network.html  auscopecat.nvcl.html  auscopecat.utils.html  modules.html
devdocs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
development/: code_of_conduct.html  contributors.html  development.html  roadmap.html
docs/: Makefile  README.md  requirements.txt
getting_started/: citation.html  examples.html  getting_started.html  installation.html  tutorials.html  usage.html
jupyter-notebooks/: api-search-download.ipynb  api-search-records.ipynb  magnetic-anomalies.ipynb  nvcl_kit-notebooks.ipynb  search-download-tutorial.ipynb  tsg-search-download.ipynb
tests/: __init__.py  helpers.py  test_analytics.py  test_api.py  test_downloadTSG.py  test_network.py  test_nvcl.py
(+54 files in other folders)
