[project]
name = "auscopecat"
version = "0.1.4"
description = "Access to AuScope's catalogue of geoscience datasets from sources all over Australia"
authors = [
    {name = "AuScope MAINTAIN", email = "cg-admin@csiro.au"},
]
dependencies = [
    "pytest>=5.0",
    "pytest-mock",
    "requests",
    "numpy",
    "pandas"
]
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Repository = "https://github.com/AuScope/AuScope-Cat"
